--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My First HTML</title>
+  <title>Elbert Washington's Bio</title>
 </head>
 
 <body>
   <!--My comments are here-->
-  <h1> LOOK AT THIS DOG!</h1>>
+  <h1> Elbert L Washington</h1>>
   <img src="https://i.kym-cdn.com/photos/images/original/000/044/210/cooldog.jpg" alt="Cool AF" />
   <br>
 
   <strong>
     LinkedIn:
-    <strong><a href="www.linkedin.com/in/elbertwashington" target="_blank"> Link </a>
+    <strong><a href="https://www.linkedin.com/in/elbertwashington" target="_blank"> Link </a>
     <br>
     Email:
-    <strong><a href="Elbert.Washington@gmail.com" target="_blank"> Link </a>
+    <strong><a href="https://Elbert.Washington@gmail.com" target="_blank"> Link </a>
       <br>
       GitHub:
       <strong><a href="https://github.com/EL57" target="_blank"> Link </a>
