Update index file
Made corrections

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 
 <body>
   <!--My comments are here-->
-  <h1> Elbert L Washington</h1>>
+  <h1> Elbert L Washington</h1>
+  <br>
+  I have 5 Years of experience and am desperate need of a challenging career.
+  <br>
+  <br>
   <img src="https://i.kym-cdn.com/photos/images/original/000/044/210/cooldog.jpg" alt="Cool AF" />
   <br>
-
+  <br>
   <strong>
     LinkedIn:
     <strong><a href="https://www.linkedin.com/in/elbertwashington" target="_blank"> Link </a>
